--- a/share/applications/rofi-file-browser.desktop
+++ b/share/applications/rofi-file-browser.desktop
@@ -3,7 +3,7 @@ Name=Rofi File Browser
 GenericName=File Manager
 Type=Application
 Categories=System;FileTools;FileManager;
-Exec=rofi -show file-browser -modi file-browser -show-icons -file-browser-dir %u
+Exec=rofi -show filebrowser -modi filebrowser -show-icons -file-browser-dir %u
 Icon=system-file-manager
 Terminal=false
 MimeType=inode/directory;
