--- a/config/polybar/config
+++ b/config/polybar/config
@@ -5,12 +5,12 @@ cursor-click=pointer
 cursor-scroll=ns-resize
 enable-ipc=true
 fixed-center=true
-font-0=JetBrains Mono:pixelsize=8;1
+font-0=JetBrains Mono:size=12
 font-1=unifont:fontformat=truetype:size=8:antialias=false;0
-font-2=Siji:pixelsize=10;0
-font-3=FuraCode Nerd Font:pixelsize=10;0
+font-2=Siji:size=10;0
+font-3=FuraCode Nerd Font:size=10;0
 foreground=${colors.foreground}
-height=27
+height=28pt
 line-color=#f00
 line-size=3
 module-margin-left=1
@@ -19,8 +19,9 @@ modules-center=date
 modules-left=i3 title
 modules-right=xkeyboard pulseaudio battery
 monitor=${env:MONITOR:}
-tray-padding=2
+tray-padding=0pt
 tray-position=right
+tray-maxsize=25pt
 width=100%
 
 [colors]
