Improve pulseaudio module in polybar

--- a/config/polybar/config
+++ b/config/polybar/config
@@ -98,28 +98,15 @@ type=internal/i3
 wrapping-scroll=false
 
 [module/pulseaudio]
-bar-volume-empty=─
-bar-volume-empty-font=2
-bar-volume-empty-foreground=${colors.foreground-alt}
-bar-volume-fill=─
-bar-volume-fill-font=2
-bar-volume-foreground-0=#55aa55
-bar-volume-foreground-1=#55aa55
-bar-volume-foreground-2=#55aa55
-bar-volume-foreground-3=#55aa55
-bar-volume-foreground-4=#55aa55
-bar-volume-foreground-5=#f5a70a
-bar-volume-foreground-6=#ff5555
-bar-volume-gradient=false
-bar-volume-indicator=|
-bar-volume-indicator-font=2
-bar-volume-width=10
-format-volume=<label-volume> <bar-volume>
-label-muted=🔇 muted
-label-muted-foreground=#666
-label-volume=VOL %percentage%%
-label-volume-foreground=${root.foreground}
 type=internal/pulseaudio
+format-volume="<label-volume> <ramp-volume>"
+label-volume="%{T1}%percentage:3%%%{T-}"
+ramp-volume-0="%{T2}奄"
+ramp-volume-1="%{T2}奔"
+ramp-volume-2="%{T2}墳"
+label-muted="---%%{T2} ﱝ"
+label-muted-foreground=#666
+click-right = pavucontrol
 
 [module/title]
 label=%title%
